--- a/Bakery/Views/Flavors/Index.cshtml
+++ b/Bakery/Views/Flavors/Index.cshtml
@@ -10,7 +10,9 @@
 @if (@Model.Count == 0)
 {
   <h3>No flavors have been added yet!</h3>
-} else {
+} 
+else 
+{
   <ul class="mb-5 list-group">  
   @foreach (Flavor flavor in Model)
   {
