--- a/Bakery/Views/Shared/Footer.cshtml
+++ b/Bakery/Views/Shared/Footer.cshtml
@@ -1,6 +1,6 @@
-<div class="footer">
+<div class="foote">
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2022 Copyright:
-    <a class="footer" href="https://anton-ch.com/">Anton Ch</a>
+    <a class="foote" href="https://anton-ch.com/">Anton Ch</a>
   </div>
 </div>
